<resources>
    <string name="app_name">MiHuellasApp</string>
    <string name="usuario">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="btn_agregar">Agregar</string>
    <string name="contraseña">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_Editar">Editar</string>
    <string name="btn_Buscar">Buscar</string>
    <string name="btn_Eliminar">Eliminar</string>
    <string name="btn_volver">Volver</string>
    <string name="cancelar">Cancelar</string>
    <string name="hint"> </string>
    <string name="facebook_app_id">546940026323761</string>
    <string name="fb_login_protocol_scheme">fb546940026323761</string>
    <string name="lugar"></string>
    <string name="welcome">Bienvenido</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="firebase_error_login">Error al iniciar sesión en Firebase</string>
    <string name="DescripcionPublicacion">Descripcion</string>
    <string name="AnimalPublicacion">Animal</string>

    <string-array name="animal">
        <item>Gato</item>
        <item>Perro</item>
    </string-array>
    <string-array name="sexo">
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>
    <string-array name="sexo2">
        <item>No lo sé</item>
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>
    <string-array name="Color">
        <item>Amarillo</item>
        <item>Blanco</item>
        <item>Negro</item>
        <item>Gris</item>
        <item>Cafe Claro</item>
        <item>Cafe Oscuro</item>
    </string-array>
    <string-array name="Color2">
        <item>Ninguno</item>
        <item>Amarillo</item>
        <item>Blanco</item>
        <item>Negro</item>
        <item>Gris</item>
        <item>Cafe Claro</item>
        <item>Cafe Oscuro</item>
    </string-array>
    <string-array name="Raza">
        <item>Quiltro</item>
        <item>Golden</item>
        <item>Chihuhua</item>
        <item>Pastor Aleman</item>
        <item>Pitbull</item>
        <item>Rottweiler</item>
        <item>Poodle</item>
        <item>Bulldog</item>
        <item>Gato Habana</item>
        <item>Gato Comúm Europeo</item>
        <item>Gato Rafamuffin</item>
        <item>Gato Britanico pelo largo</item>
    </string-array>
    <string-array name="Raza2">
        <item>Quiltro</item>
        <item>No lo sé</item>
        <item>Golden</item>
        <item>Chihuhua</item>
        <item>Pastor Aleman</item>
        <item>Pitbull</item>
        <item>Rottweiler</item>
        <item>Poodle</item>
        <item>Bulldog</item>
        <item>Gato Habana</item>
        <item>Gato Comúm Europeo</item>
        <item>Gato Rafamuffin</item>
        <item>Gato Britanico pelo largo</item>
    </string-array>
    <string-array name="tamaño">
        <item>Chico</item>
        <item>Mediano</item>
        <item>Grande</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_ubicacion_mascota_perdida">Map</string>
</resources>