<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registrar_MascotaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@mipmap/fondo_top"
                android:gravity="center|center_horizontal"
                android:text="Registro Nueva Mascota"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="10dp" />

            <ImageButton
                android:id="@+id/imb_foto"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/img" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Nombre"
                    android:textColor="#1660F1"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="25sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/txt_nombre_mascota"
                    android:layout_width="210sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:ems="10"
                    android:hint="@string/hint"
                    android:inputType="textPersonName"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Animal"
                    android:textColor="#1660F1"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="50sp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spn_animal"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/animal"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Sexo"
                    android:textColor="#1660F1"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="50sp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spn_sexo_perfilMascota"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/sexo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Raza"
                    android:textColor="#1660F1"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="50sp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spn_raza"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/Raza" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Color"
                    android:textColor="#1660F1"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="50sp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spn_color"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:entries="@array/Color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Segundo\nColor"
                    android:textColor="#1660F1"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="50sp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spn_color2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/Color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Tamaño"
                    android:textColor="#1660F1"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="50sp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spn_tamaño"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/tamaño" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Edad"
                    android:textColor="#1660F1"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="304dp"
                    android:layout_height="37dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.611"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/tamaño">

                    <RadioButton
                        android:id="@+id/rdb_cachorro"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:text="Cachorro"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rdb_adulto"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:text="Adulto"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rdb_anciano"
                        android:layout_width="wrap_content"
                        android:layout_height="31dp"
                        android:layout_weight="1"
                        android:text="Anciano"
                        android:textSize="16sp" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Descripción"
                    android:textColor="#1660F1"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txt_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#C6C3C3"
                    android:text="@string/cancelar" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_editar_mascota"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@mipmap/fondo_top"
                    android:text="@string/btn_registrar"
                    android:textColor="@color/colorWhite" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40sp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>